exports[`webpack Accepts a custom config 1`] = `
Object {
  "babel": Object {
    "babelrc": "/test/project/path",
  },
  "devtool": "source-map",
  "entry": Object {
    "index": "./index",
    "vendor": Array [],
  },
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/project/path/src",
        ],
        "test": /\.(jsx?|es6)$/,
        "use": "babel-loader",
      },
    ],
  },
  "output": Object {
    "chunkFilename": "[name]-[hash].chunk.js",
    "filename": "[name]-[hash].js",
    "path": "/test/project/path/dist",
    "publicPath": "https://cdn.com/",
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".es6",
    ],
    "modules": Array [],
  },
}
`;

exports[`webpack Creates a webpack config object 1`] = `
Object {
  "babel": Object {
    "babelrc": "/test/project/path",
  },
  "devtool": "source-map",
  "entry": Object {
    "index": "./index",
    "vendor": Array [],
  },
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/project/path/src",
        ],
        "test": /\.(jsx?|es6)$/,
        "use": "babel-loader",
      },
    ],
  },
  "output": Object {
    "chunkFilename": "[name]-[hash].chunk.js",
    "filename": "[name]-[hash].js",
    "path": "/test/project/path/dist",
    "publicPath": "/",
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".es6",
    ],
    "modules": Array [],
  },
}
`;
